tests/errors/se_nestdef.pyx
def f():
	def g():
		pass
_ERRORS = u"""
/Local/Projects/D/Pyrex/Source/Tests/Errors1/se_nestdef.pyx:2:1: def statement not allowed here
"""
